Removed overflow for topics container to fix hint truncation [#168154501]

--- a/lara-plugin/tutorial/tutorial-format.css
+++ b/lara-plugin/tutorial/tutorial-format.css
@@ -29,7 +29,7 @@
 
 .topics {
   width: 75%;
-  overflow-x: auto;
+  /* overflow-x: auto; */
   padding-bottom: 40px;
 }
 
